--- a/Index.html
+++ b/Index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Formulário</title>
-</head>
-<body>
-    <h1>Bom Dia, esse é o primeiro código de HTML</h1>
+  <html lang="PT-BR">
+      <head>
 
-    <form method="POST" action="index.php">
-        <fieldset>
-            <legend>Primeiro formulário</legend>
-            <br>
-            
-            <label for="usuario">Usuário:</label>
-            <input type="text" id="usuario" name="usuario" placeholder="Usuário" minlength="5" maxlength="10" required>
-            
-            <br><br>
-
-            <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" placeholder="Senha" minlength="5" maxlength="10" required>
-        </fieldset>
-    </form>
-</body>
-</html>
+      </head>
+      <body>
+          Bom dia, esse é o primeiro codigo de html
+        <form method="POST" action="index.php">
+            <fieldset>
+                <legend>
+                  Primeiro Formulario
+                </legend>
+                <br>
+                Usuario: <input type="text" placeholder="Usuario" minlength="5" maxlength="10" required><br>
+                Senha:   <input type="password" placeholder="Senha" minlength="5" maxlength="10" required><br>
+                <input type="submit" value="Registrar">
+            </fieldset>
+        </form>
+      </body>
+  </html>
