--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,8 @@
       </head>
       <style>
           .body{
-            background-color: yellow;
+            background-color: #0f172a; /* Azul Noche */
+            color: #22d3ee;           /* Cian Brillante */
           }
       </style>
       <body class="body">
