Update styles and form layout in Index.html

--- a/Index.html
+++ b/Index.html
@@ -8,8 +8,14 @@
       </head>
       <style>
           .body{
-            background-color: #0f172a; /* Azul Noche */
-            color: #22d3ee;           /* Cian Brillante */
+            background-color: yellow;
+            color:red;
+          }
+          .texto{
+            color:purple;
+          }
+          .submit{
+            background-color: green;
           }
       </style>
       <body class="body">
@@ -20,9 +26,9 @@
                   Primeiro Formulario
                 </legend>
                 <br>
-                Usuario: <input type="text" placeholder="Usuario" minlength="5" maxlength="10" required><br>
-                Senha:   <input type="password" placeholder="Senha" minlength="5" maxlength="10" required><br>
-                <input type="submit" value="Registrar">
+                <p class="texto">Usuario:</p> <input type="text" placeholder="Usuario" minlength="5" maxlength="10" required><br>
+                <p class="texto">Senha:</p>   <input type="password" placeholder="Senha" minlength="5" maxlength="10" required><br>
+                <input type="submit" value="Registrar" class="submit">
             </fieldset>
         </form>
       </body>
